fix(productline): fix behavior and style + delete comms on mobile

--- a/src/modules/Article/components/ProductLine/ProductLine.module.scss
+++ b/src/modules/Article/components/ProductLine/ProductLine.module.scss
@@ -1,34 +1,123 @@
-.card {
-  position: relative;
-  display: flex;
-  padding-right: 16px;
+.productLine {
+  padding: 8px 0;
 
-  &:focus {
+  .SliderContainer {
+    padding: 0 16px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .cards {
+    overflow: auto;
+    display: flex;
+
+    // background-color: antiquewhite;
+  }
+
+  .card {
+    display: flex;
+    margin-right: 16px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .gellule:focus:before {
+    width: auto;
+    height: auto;
+    margin: 0 10px 0 0;
+  }
+
+  .gellule {
+    &:before {
+      font-size: 20px;
+      position: relative;
+      bottom: 4px;
+    }
+
+    position: absolute;
+    bottom: 16px;
+    border-radius: 20px;
+    border: none;
+    height: 40px;
+    min-width: 0;
+    padding: 0 16px 0 14px;
+
+    &:after {
+      display: none;
+    }
+  }
+
+  .onlyText {
+    text-decoration: underline;
+  }
+
+  .cardSubcontainer {
+    width: 300px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  img {
+    margin: 0 auto;
+    width: 100%;
+    display: block;
+  }
+
+  .cardSubcontainer {
+    position: relative;
+  }
+
+  .pictenzaFavoritesSelect {
+    &:before,
+    &:after {
+      content: '\e644';
+      color: #ff2157;
+    }
+
+    &:after {
+      animation: heartOn 0.35s ease forwards;
+      position: absolute;
+      top: 2px;
+      right: 2px;
+      line-height: 33px;
+      min-width: 36px;
+    }
+  }
+
+  .favoriteCard {
+    &:before {
+      margin: 8px 13px 10px;
+      font-size: 18px;
+    }
+
+    position: absolute;
+    top: 16px;
+    right: 24px;
+    border-radius: 30px;
+    background-color: white;
     outline: none;
+  }
+
+}
+
+@keyframes heartOn {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(2.5);
   }
 }
 
-.SliderContainer {
-  padding: 0 16px;
-  width: 960px;
-  margin: 0 auto;
-}
-
-.cards {
-  overflow: auto;
-  display: flex;
-}
-
-.btn {
-  position: absolute;
-  bottom: 30px;
-  left: 100px;
-  background-color: white;
-  padding: 8px;
-  border-radius: 16px;
-  font-family: RobotoC;
-  font-size: 12px;
-  text-transform: uppercase;
-  text-decoration: underline;
-  font-weight: 600;
-}
+@import 'ProductLine.module.wide';
